# eth_scrapper

./: .dockerignore  .gitignore  Dockerfile  Pipfile  README.md  build.sh  docker-compose.yaml.example  pyproject.toml  requirements.txt
.github/workflows/: build.yaml  push.yaml
src/: main.py
