[tool.poetry]
name = "eth_scrapper"
version = "0.2.0"
description = ""
authors = ["Pablo Gómez <pablogomez@pablogomez.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.24.0"
bs4 = "^0.0.1"
oauth2client = "^4.1.3"
gspread = "^3.6.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.5.3"
autopep8 = "^1.5.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"